fixed some bugs

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -48,6 +48,6 @@
     "canc": "Отменить",
     "cont": "Продолжить",
     "back": "Вернуться назад",
-    "добавить": "Добавить"
+    "add": "Добавить"
   }
 }
